# InfiniNN

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
0_common/arg/: Cargo.toml
0_common/graph/: Cargo.toml
1_nn/: Cargo.toml
1_nn/src/: graph.rs  lib.rs
2_mem/: Cargo.toml
2_mem/src/: graph.rs  lib.rs  op.rs
3_exec/: Cargo.toml
3_exec/src/: lib.rs
example/: Cargo.toml
example/src/: gguf.rs  main.rs  model.rs
graph/src/: topo.rs
nn/: Cargo.toml
nn-vm/: Cargo.toml
nn-vm/src/: ctx.rs  lib.rs  test.rs
nn/src/: arg.rs  attention.rs  context.rs  ctx.rs  dim.rs  lib.rs  linear.rs  linear_residual.rs  lm_output.rs  mlp.rs  normalization.rs  self_attn.rs  token_embed.rs  transformer.rs  transformer_blk.rs
nnvm/: Cargo.toml
nnvm/src/: lib.rs  macros.rs  operator.rs
op/: Cargo.toml
op/src/: add.rs  gelu.rs  gemm.rs  layer_norm.rs  lib.rs  rms_norm.rs  swiglu.rs
rw-rc/src/: flag.rs  lib.rs  local.rs  weak.rs
src/: context.rs  ext.rs  lib.rs  operators.rs  tensor.rs  test.rs
src/nn/: activation.rs  attention.rs  linear.rs  linear_residual.rs  lm_output.rs  mlp.rs  mod.rs  normalization.rs  self_attn.rs  token_embed.rs  transformer.rs  transformer_blk.rs
src/op/: add.rs  gelu.rs  layer_norm.rs  mat_mul.rs  mod.rs  rearrange.rs  rms_norm.rs  rope.rs  softmax.rs  (+2 more)
test-vm/: Cargo.toml
vm/: Cargo.toml
vm-impl/cpu/: Cargo.toml
vm-impl/cpu/src/: fmt.rs  lib.rs  test_llama.rs
vm-impl/cpu/src/op/: add.rs  gelu.rs  layer_norm.rs  mat_mul.rs  mod.rs  rearrange.rs  rms_norm.rs  rope.rs  softmax.rs  swiglu.rs  token_embed.rs
(+136 files in other folders)
