[package]
name = "example"
version = "0.0.0"
edition.workspace = true
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
nn.path = "../1_nn"
memmap2 = "0.9"
tensor.workspace = true
ggus = { git = "https://github.com/InfiniTensor/gguf", rev = "23c362f" }
rwrc = { git = "https://github.com/YdrMaster/rwrc", rev = "3969558" }
